--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "author": "Jeremy Childs <jeremyc@ssimicro.com>",
   "name": "LDAP",
   "description": "LDAP Binding for node.js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./LDAP.js",
   "engines": {
     "node": ">= 0.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "scripts": {
+    "preinstall": "node-waf clean || (exit 0); node-waf configure build"
+  },
+  "dependencies": {},
+  "optionalDependencies": {}
 }
